# cosmic-cap-lock

./: Cargo.toml  README.md  justfile
data/: com.system76.CosmicAppletCapslock.desktop  cosmic-applet-capslock.desktop
src/: keyboard.rs  main.rs
